PWA-ready index.html

--- a/public/planner.html
+++ b/public/planner.html
@@ -90,6 +90,13 @@ const dateInput = document.getElementById('dateInput');
 const dateDisplay = document.getElementById('dateDisplay');
 const addBtn = document.getElementById('addBtn');
 const backBtn = document.getElementById('backBtn');
+function getLocalDateString(date = new Date()) {
+  const year = date.getFullYear();
+  const month = String(date.getMonth() + 1).padStart(2, "0");
+  const day = String(date.getDate()).padStart(2, "0");
+  return `${year}-${month}-${day}`;
+}
+
 
 let offset = 0;
 let lastTap = 0;
@@ -116,7 +123,8 @@ addBtn.onclick = () => {
 function renderDay() {
   const d = new Date();
   d.setDate(d.getDate() + offset);
-  const key = d.toISOString().split('T')[0];
+  date: getLocalDateString()
+
 
   dayView.innerHTML = `
     <div class="day-box swipe-reset" data-date="${key}">
