PWA-ready index.html

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -18,9 +18,19 @@
 
       <div class="card">
         <h3>Total Session Tonnage</h3>
-        <p id="tonnageValue" style="font-size: 1.6rem; font-weight: 600;">
-          —
+        <p id="totalTonnage" style="font-size: 1.6rem; font-weight: 600;">
+          0 kg
         </p>
+      </div>
+
+      <div class="card">
+        <h3>Total Sets</h3>
+        <p id="totalSets">0</p>
+      </div>
+
+      <div class="card">
+        <h3>Total Reps</h3>
+        <p id="totalReps">0</p>
       </div>
 
     </div>
@@ -29,17 +39,3 @@
   <script src="analytics.js"></script>
 </body>
 </html>
-<div class="analytics-card">
-  <h3>Total Tonnage</h3>
-  <p id="totalTonnage">0 kg</p>
-</div>
-
-<div class="analytics-card">
-  <h3>Total Sets</h3>
-  <p id="totalSets">0</p>
-</div>
-
-<div class="analytics-card">
-  <h3>Total Reps</h3>
-  <p id="totalReps">0</p>
-</div>
