--- a/public/analytics.html
+++ b/public/analytics.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="theme-color" content="#111827">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Analytics</title>
@@ -37,5 +41,52 @@
   </div>
 
   <script src="analytics.js"></script>
+  <nav class="bottom-nav">
+  <button data-page="dashboard" onclick="location.href='dashboard.html'">
+    <span class="icon">
+      <img src="/icons/home.png" class="nav-icon">
+    </span>
+    <span class="label">Home</span>
+  </button>
+
+  <button data-page="view" onclick="location.href='view.html'">
+    <span class="icon">
+      <img src="/icons/workout.png" class="nav-icon">
+    </span>
+    <span class="label">Workouts</span>
+  </button>
+
+  <button
+    data-page="workout"
+    class="create-btn"
+    onclick="location.href='workout.html'"
+  >
+    <span class="icon">＋</span>
+  </button>
+
+  <button data-page="analytics" onclick="location.href='analytics.html'">
+    <span class="icon">
+      <img src="/icons/analytics.png" class="nav-icon">
+    </span>
+    <span class="label">Analytics</span>
+  </button>
+
+  <button data-page="profile"
+     class="icon">
+      <img src="/icons/profile.png" class="nav-icon">
+    </span>
+    <span class="label">Profile</span>
+  </button>
+</nav>
+<script>
+  const currentPage = location.pathname.split("/").pop().replace(".html", "");
+
+  document.querySelectorAll(".bottom-nav button").forEach(btn => {
+    if (btn.dataset.page === currentPage) {
+      btn.classList.add("active");
+    }
+  });
+</script>
+
 </body>
 </html>
