--- a/public/view.html
+++ b/public/view.html
@@ -269,7 +269,8 @@ loadWorkouts();
     <span class="icon">＋</span>
   </button>
 
-  <button data-page="stats" disabled>
+  <button data-page="analytics" onclick="location.href='analytics.html'">
+
     <span class="icon">
       <img src="/icons/analytics.png" alt="Analytics" class="nav-icon">
     </span>
