--- a/public/analytics.html
+++ b/public/analytics.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Status bar / browser UI colour -->
-  <meta name="theme-color" content="#111827">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Analytics</title>
 
+  <!-- Status bar / PWA -->
+  <meta name="theme-color" content="#111827">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <style>
-    /* ===== TOP NAV (Dashboard-style) ===== */
+    /* ===== TOP NAV ===== */
     .top-nav {
       position: sticky;
       top: 0;
@@ -34,7 +34,7 @@
 
     .page {
       padding: 1rem;
-      padding-bottom: 140px; /* space for bottom nav */
+      padding-bottom: 140px; /* bottom nav space */
     }
 
     .container {
@@ -50,7 +50,6 @@
       border: 1px solid #1f2937;
     }
 
-    /* Analytics text styles */
     h3 { color: #38bdf8; margin-bottom: 0.5rem; }
     p { color: #e5e7eb; font-size: 1.1rem; margin: 0.25rem 0; }
 
@@ -67,6 +66,7 @@
       padding: 0.5rem 0;
       z-index: 100;
     }
+
     .bottom-nav button {
       background: none;
       border: none;
@@ -77,12 +77,12 @@
       font-size: 0.75rem;
       cursor: pointer;
     }
+
     .bottom-nav button.active { color: #38bdf8; }
     .bottom-nav button .icon { margin-bottom: 0.2rem; }
     .create-btn { font-size: 1.5rem; color: #38bdf8; }
   </style>
 </head>
-
 <body class="analytics-page">
 
   <!-- TOP NAV -->
@@ -93,7 +93,7 @@
 
       <!-- ANALYTICS CARDS -->
       <div class="card">
-        <h3>Total Tonnage</h3>
+        <h3>Total Session Tonnage</h3>
         <p id="totalTonnage">0 kg</p>
       </div>
 
@@ -138,14 +138,13 @@
   </nav>
 
   <script>
-    // Highlight active bottom nav
-    const current = location.pathname.split("/").pop().replace(".html", "");
+    // Highlight current page in bottom nav
+    const currentPage = location.pathname.split("/").pop().replace(".html", "");
     document.querySelectorAll(".bottom-nav button").forEach(btn => {
-      if (btn.dataset.page === current) btn.classList.add("active");
+      if (btn.dataset.page === currentPage) btn.classList.add("active");
     });
   </script>
 
   <script src="analytics.js"></script>
-
 </body>
 </html>
