--- a/public/analytics.html
+++ b/public/analytics.html
@@ -3,19 +3,17 @@
 <head>
     <style>
     .top-nav {
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  background: #111827;       /* match page background */
-  border-bottom: 1px solid #1f2937;
-  padding: 1.5rem 1rem;      /* moved down a bit */
-  text-align: left;          /* top left corner */
-  font-weight: 600;
-  color: #38bdf8;
-  font-size: 1.4rem;         /* slightly bigger */
-  line-height: 1.4;          /* vertical alignment */
-}
-
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      background: #111827;
+      border-bottom: 1px solid #1f2937;
+      padding: 1rem;
+      text-align: center;
+      font-weight: 600;
+      color: #38bdf8;
+      font-size: 1.2rem;
+    }
     .page { padding-top: 1rem; }
     .back-btn, .logout-btn {
       display: inline-block;
@@ -31,15 +29,7 @@
       margin-right: 5px;
     }
     .back-btn:hover, .logout-btn:hover { opacity: 0.85; }
-    body {
-  margin: 0;
-  background: #111827;   /* same as other pages */
-  font-family: sans-serif;
-  min-height: 100vh;
-}
-
   </style>
-  
   <div class="top-nav">Ascend</div>
 
     <meta name="theme-color" content="#111827">
@@ -52,7 +42,6 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="analytics-page">
 
 
  
@@ -174,4 +163,5 @@
 </script>
 
 </body>
+<body class="analytics-page"></body>
 </html>
