PWA-ready index.html

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -109,6 +109,14 @@
     </span>
     <span class="label">Profile</span>
   </button>
+  
+  <button data-page="analytics">
+  <span class="icon">
+    <img src="/icons/analytics.png" class="nav-icon">
+  </span>
+  <span class="label">Analytics</span>
+</button>
+
 </nav>
 <script>
   const currentPage = location.pathname.split("/").pop().replace(".html", "");
