PWA-ready index.html

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -147,7 +147,7 @@
     <span class="icon">＋</span>
   </button>
 
-  <button data-page="stats" disabled>
+  <button data-page="analytics" disabled>
     <span class="icon">
       <img src="/icons/analytics.png" alt="Analytics" class="nav-icon">
     </span>
